various fixes, add syd-sha1 tool
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ Makefile
 /man/*.ent
 
 # Sydb☮x-1
+/misc/syd-hilite
 /src/sydbox
 /src/sydfmt
 /src/sydbox-dump
@@ -127,6 +128,7 @@ Makefile
 /src/syd-dump
 /src/syd-errno
 /src/syd-format
+/src/syd-sha1
 /src/syd-shoebox
 /src/lib.rs
 /t/syd-test
