--- a/syd/libsyd.ld.in
+++ b/syd/libsyd.ld.in
@@ -116,7 +116,6 @@ global:
 	syd_hash_to_hex;
 	syd_hash_to_hex_r;
 	syd_hex_to_bytes;
-	syd_fd_to_sha1_hex;
 	syd_file_to_sha1_hex;
 	syd_path_to_sha1_hex;
 	/* syd.h */
@@ -187,10 +186,14 @@ global:
 	syd_extfs_set_flags;
 	syd_extfs_get_undeletable;
 	syd_extfs_set_undeletable;
-	syd_extfs_get_sec_delete;
-	syd_extfs_set_sec_delete;
+	syd_extfs_get_secure_delete;
+	syd_extfs_set_secure_delete;
 	syd_extfs_get_immutable;
 	syd_extfs_set_immutable;
+	syd_extfs_get_append_only;
+	syd_extfs_set_append_only;
+	syd_extfs_get_compress;
+	syd_extfs_set_compress;
 local:
 	*;
 };
