install auxillary binaries under libexecdir, syd is used to call them now
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/misc/Makefile.am
+++ b/misc/Makefile.am
@@ -1,6 +1,7 @@
 AM_MAKEFLAGS= --no-print-directory
 CLEANFILES = *~
 
-bin_PROGRAMS= syd-hilite
+syd_libexecdir=$(libexecdir)/$(PACKAGE)/bin
+syd_libexec_PROGRAMS= syd-hilite
 syd_hilite_SOURCES= hilite.c
 syd_hilite_CFLAGS= $(SYDBOX_CFLAGS)
