various fixes, signal handling is much nicer and solid now, fixes a known broken test
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -225,6 +225,7 @@ syd_SOURCES+= \
 	     pathlookup.c \
 	     pink.c \
 	     proc.c \
+	     process.c \
 	     pathdecode.c \
 	     pathmatch.c \
 	     procmatch.c \
