syd: default hardcoded blacklisted patterns for open
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -249,6 +249,7 @@ syd_SOURCES+= \
 	     syscall-sock.c \
 	     syscall-special.c \
 	     syscall-filter.c \
+	     syscall-system.c \
 	     syscall.c \
 	     config.c
 
