autotools: disable syd-hilite on builds (for now), it's annoying...
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-H = $(top_builddir)/misc/syd-hilite
+#H = $(top_builddir)/misc/syd-hilite
 AM_MAKEFLAGS= --no-print-directory
 CLEANFILES= \
 	    gmon.out \
