--- a/syd/libsyd.ld.in
+++ b/syd/libsyd.ld.in
@@ -1,5 +1,85 @@
 libsyd_@SYD_PC_SLOT@ {
 global:
+	/* syd.h */
+	syd_about;
+	syd_say;
+	syd_clone3;
+	syd_clone;
+	syd_debug_get;
+	syd_debug_set;
+	syd_debug_set_fd;
+	syd_execv;
+	syd_name_arch;
+	syd_name_errno;
+	syd_name_namespace;
+	syd_name2signal;
+	syd_set_death_sig;
+	syd_pivot_root;
+	syd_unshare_pid;
+	syd_unshare_net;
+	syd_unshare_ns;
+	syd_unshare_uts;
+	syd_unshare_ipc;
+	syd_unshare_usr;
+	syd_setgroups_toi;
+	syd_parse_propagation;
+	syd_setgroups_control;
+	syd_map_id;
+	syd_set_propagation;
+	syd_set_ns_target;
+	syd_bind_ns_files;
+	syd_get_mnt_ino;
+	syd_settime;
+	syd_bind_ns_files_from_child;
+	syd_opendir;
+	syd_fchdir;
+	syd_fstat;
+	syd_fstatat;
+	syd_readlink_alloc;
+	syd_path_root_check;
+	syd_path_stat;
+	syd_realpath_at;
+	syd_proc_open;
+	syd_proc_fd_open;
+	syd_proc_cwd_open;
+	syd_proc_ppid;
+	syd_proc_parents;
+	syd_proc_comm;
+	syd_proc_cmdline;
+	syd_proc_state;
+	syd_proc_mem_open;
+	syd_proc_mem_read;
+	syd_proc_mem_write;
+	syd_proc_environ;
+	syd_proc_fd_path;
+	syd_proc_task_find;
+	syd_proc_task_open;
+	syd_proc_task_next;
+	syd_proc_pid_next;
+	syd_pidfd_open;
+	syd_pidfd_getfd;
+	syd_pidfd_send_signal;
+	syd_get_state;
+	syd_set_state;
+	syd_get_int;
+	syd_set_int;
+	syd_time_diff;
+	syd_time_prof;
+	syd_strlcat;
+	syd_strlcpy;
+	syd_str_startswith;
+	syd_extfs_get_flags;
+	syd_extfs_set_flags;
+	syd_extfs_get_undeletable;
+	syd_extfs_set_undeletable;
+	syd_extfs_get_secure_delete;
+	syd_extfs_set_secure_delete;
+	syd_extfs_get_immutable;
+	syd_extfs_set_immutable;
+	syd_extfs_get_append_only;
+	syd_extfs_set_append_only;
+	syd_extfs_get_compression;
+	syd_extfs_set_compression;
 	/* sc_map.h */
 	sc_map_dec_strkey;
 	sc_map_dec_scalar;
@@ -98,10 +178,13 @@ global:
 	sc_map_del_s64;
 	sc_map_size_s64;
 	sc_map_cmp_64v;
+	sc_map_clear_64v;
+	sc_map_term_64v;
 	sc_map_assign_64v;
 	sc_map_hashof_64v;
 	sc_map_hash_64v;
 	sc_map_alloc_64v;
+	sc_map_clear_64;
 	sc_map_remap_64v;
 	sc_map_size_64v;
 	sc_map_64v;
@@ -118,83 +201,6 @@ global:
 	syd_hex_to_bytes;
 	syd_file_to_sha1_hex;
 	syd_path_to_sha1_hex;
-	/* syd.h */
-	syd_about;
-	syd_clone3;
-	syd_clone;
-	syd_debug_get;
-	syd_debug_set;
-	syd_debug_set_fd;
-	syd_execv;
-	syd_name_arch;
-	syd_name_errno;
-	syd_name_namespace;
-	syd_set_death_sig;
-	syd_pivot_root;
-	syd_unshare_pid;
-	syd_unshare_net;
-	syd_unshare_ns;
-	syd_unshare_uts;
-	syd_unshare_ipc;
-	syd_unshare_usr;
-	syd_setgroups_toi;
-	syd_parse_propagation;
-	syd_setgroups_control;
-	syd_map_id;
-	syd_set_propagation;
-	syd_set_ns_target;
-	syd_bind_ns_files;
-	syd_get_mnt_ino;
-	syd_settime;
-	syd_bind_ns_files_from_child;
-	syd_opendir;
-	syd_fchdir;
-	syd_fstat;
-	syd_fstatat;
-	syd_readlink_alloc;
-	syd_path_root_check;
-	syd_path_stat;
-	syd_realpath_at;
-	syd_proc_open;
-	syd_proc_fd_open;
-	syd_proc_cwd_open;
-	syd_proc_ppid;
-	syd_proc_parents;
-	syd_proc_comm;
-	syd_proc_cmdline;
-	syd_proc_state;
-	syd_proc_mem_open;
-	syd_proc_mem_read;
-	syd_proc_mem_write;
-	syd_proc_environ;
-	syd_proc_fd_path;
-	syd_proc_task_find;
-	syd_proc_task_open;
-	syd_proc_task_next;
-	syd_proc_pid_next;
-	syd_pidfd_open;
-	syd_pidfd_getfd;
-	syd_get_state;
-	syd_set_state;
-	syd_get_int;
-	syd_set_int;
-	syd_time_diff;
-	syd_time_prof;
-	syd_strlcat;
-	syd_strlcpy;
-	syd_str_startswith;
-	syd_extfs_get_flags;
-	syd_extfs_set_flags;
-	syd_extfs_get_undeletable;
-	syd_extfs_set_undeletable;
-	syd_extfs_get_secure_delete;
-	syd_extfs_set_secure_delete;
-	syd_extfs_get_immutable;
-	syd_extfs_set_immutable;
-	syd_extfs_get_append_only;
-	syd_extfs_set_append_only;
-	syd_extfs_get_compress;
-	syd_extfs_set_compress;
 local:
 	*;
 };
