tests: add new test binary to do openat(AT_FDWD, ".", O_RDONLY) which is buggy under sydbox
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/t/bin/Makefile.am
+++ b/t/bin/Makefile.am
@@ -70,7 +70,7 @@ syd_PROGRAMS= wildtest realpath_mode-1 sockmatchtest \
 	      syd-false syd-false-static syd-false-fork syd-false-fork-static syd-false-pthread \
 	      syd-abort syd-abort-static syd-abort-fork syd-abort-fork-static \
 	      syd-abort-pthread syd-abort-pthread-static syd-fstatat syd-mkdir-p syd-open-static \
-	      threads_execve
+	      syd-open-dot threads_execve
 
 check_SCRIPTS= $(syd_SCRIPTS)
 check_PROGRAMS= $(syd_PROGRAMS)
