add rc doc, allow informational proc files such as /proc/meminfo so ps work without security breach
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,7 @@ Makefile
 /src/sydfmt
 /src/sydbox-dump
 /src/shoebox
+/src/rc/*.tab.h
 /t/sydtest
 /t/bin-wrappers/sydbox
 /t/bin-wrappers/sydbox-dump
