rc: make sure rc compiles with {clang,lld}-10 on a Linux-5.10.0 system with autotools
Also clean up wrongly added yacc generated files.

Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,8 @@ Makefile
 /src/sydbox-dump
 /src/shoebox
 /src/rc/*.tab.h
+/src/rc/*.tab.c
+/src/rc/syn.c
 /t/sydtest
 /t/bin-wrappers/sydbox
 /t/bin-wrappers/sydbox-dump
