syd: implement basic system call logging (wip, does not work properly yet)
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -242,6 +242,7 @@ syd_SOURCES+= \
 	     magic-restrict.c \
 	     magic-allowlist.c \
 	     magic-acl.c \
+	     magic-log.c \
 	     magic-match.c \
 	     magic-cmd.c \
 	     magic.c \
