libsyd: implement xxh64 and xxh32 hash interfaces, syd: rename syd-sha1 to syd-hash add -s, --secure, --sha1dc_partialcoll to select the cryptographically secure sha-1 hash. no benchmarks done yet. justinkb im looking at you. syd-hash interface is wip tho, coming in a bit
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,7 @@ Makefile
 /src/syd-dump
 /src/syd-errno
 /src/syd-format
-/src/syd-sha1
+/src/syd-hash
 /src/syd-shoebox
 /src/lib.rs
 /t/syd-test
