libsyd: implement file interface for xxh{64,32}, increase sha-1 buffer size to 1M (was 65k, hope this shows in benchmarks) xxhash uses a statically allocated buffer of 1M too
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/syd/libsyd.ld.in
+++ b/syd/libsyd.ld.in
@@ -202,8 +202,14 @@ global:
 	syd_hex_to_bytes;
 	syd_file_to_sha1_hex;
 	syd_path_to_sha1_hex;
+	syd_file_to_xxh64_hex;
+	syd_path_to_xxh64_hex;
+	syd_file_to_xxh32_hex;
+	syd_path_to_xxh32_hex;
 	syd_name_to_xxh32_hex;
 	syd_name_to_xxh64_hex;
+	syd_vrfy_xxh32_hex;
+	syd_vrfy_xxh64_hex;
 local:
 	*;
 };
