libsyd: implement utf-8 utilitfy functions to be used by path sanitiser
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/syd/Makefile.am
+++ b/syd/Makefile.am
@@ -123,6 +123,7 @@ syd_check_SOURCES= \
 		   file.c \
 		   proc.c \
 		   strlcpy.c \
+		   utf8.c \
 		   hex.c \
 		   sha1.c \
 		   sha1dc_syd.c \
